# Docker_Teleop

./: .gitattributes  .gitignore  README.md
UnityApp/Assets/: BlueColor.mat  New Material 1.mat  New Material.mat  RedColor.mat  Sky1.mat  Ur5e.unity  Ur5eRosJointSubscriber.cs  Ur5eTrajectorySubscriber.cs  msgbrowser_settings.asset
UnityApp/Assets/Editor/: AddHandTargetVisualizer.cs  ApplyRoomDecorPrefabs.cs  AssignHandReferences.cs  FixInputSettings.cs  FixPhysicsSettings.cs  FixPluginImportSettings.cs  HandTrackingSetup.cs  RecreateOVRHands.cs  SceneChecker.cs
UnityApp/Assets/Materials/: MarbleTable.mat  WoodGround.mat  WoodWallPanels.mat
UnityApp/Assets/Resources/: OculusRuntimeSettings.asset  ROSConnectionPrefab.prefab
UnityApp/Assets/Robots/: ur5e.urdf
UnityApp/Assets/Scenes/: SampleScene.unity  Ur5e_Working 1.unity  Ur5e_Working.unity  ur5e.prefab
UnityApp/Assets/Scripts/: ControllerDebugVisuals.cs  GazeboPoseStampedSubscriber.cs  GripperCameraRecorder.cs  HandPoseSender.cs  HandTargetPoseVisualizer.cs  HandTrackingDebugger.cs  SceneObjectPoseSyncManager.cs  TeleopInstructionBoard.cs  VRCameraFix.cs
UnityApp/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
UnityApp/ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
dev_notes/: README.md  Unity_Quest_Debug_Stream_Setup.md
docs/: ARCHITECTURE.md  GITHUB_SETUP.md  GRIPPER_CAMERA.md  Getting_Started.md  MAPPING_TUNING.md  RECORDING.md  SYSTEM_BRINGUP.md  System_Setup.md  TROUBLESHOOTING.md  Technical_Details.md  UNITY_QUEST_BUILD.md  WIRED_WIRELESS_SETUP.md  WORLD_FRAME_MAPPING.md
ros_backend0.5/: .env  Dockerfile  Implementation_Roadmap_v2.md  RAW_COMMANDS.md  README_in_container.md  SHUTDOWN_RESTART.md  backend05_lifecycle.sh  docker-compose.yaml  entrypoint.sh  gz  start_desktop.sh
ros_backend0.5/simulation/config/: ur5e_gz_controllers.yaml
ros_backend0.5/simulation/launch/: run_tabletop_sim.sh
ros_backend0.5/src/servo_test_config/: package.xml  (+1 more)
ros_backend0.5/src/teleop_bridge/: package.xml  setup.py
ros_backend0.5/src/teleop_bridge/config/: teleop_tuning.yaml
ros_backend0.5/src/teleop_bridge/teleop_bridge/: cube_pose_sync_publisher.py  fake_hand_publisher.py  gripper_hold_to_position.py  quest_controller_receiver.py  received_pose_to_target_twist.py  target_twist_reset_manager.py  target_twist_to_gripper_cmd.py  target_twist_to_servo_cmd.py  test_joints.py
ros_backend0.5/src/ur_hande_description/: CMakeLists.txt  package.xml
ros_backend0.5/src/ur_hande_description/urdf/: ur_hande.urdf.xacro
ros_backend1.0/: .env.example  .gitignore  Dockerfile  docker-compose.yaml
ros_backend1.0/Readme/: CONTROLLER_BUTTONS.md  MAPPING_TUNING_COMMANDS copy.md  README.md  RECORDING.md  System_Bringup.md  WIRED_WIRELESS_SETUP.md  WORLD_FRAME_MAPPING.md
ros_backend1.0/scripts/: backend10_lifecycle.sh  bump_tcp_port.sh  bump_udp_port.sh  hardcoded_pick_cube.sh
ros_backend1.0/src/receiver/: package.xml  setup.cfg  setup.py
ros_backend1.0/src/receiver/receiver/: quest_controller_receiver.py
ros_backend1.0/src/servo_test_config/: package.xml  setup.cfg  setup.py
ros_backend1.0/src/servo_test_config/config/: servo_gz.yaml
ros_backend1.0/src/servo_test_config/launch/: servo_gz.launch.py
ros_backend1.0/src/servo_test_config/servo_test_config/: joint_states_filter.py
(+45 files in other folders)
