<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop_bridge</name>
  <version>0.1.0</version>
  <description>VR Hand Tracking to ROS 2 Bridge</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>TODO</license>

  <depend>rclpy</depend>
  <depend>rcl_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>moveit_servo</depend>
  <depend>tf2_ros</depend>
  <depend>std_srvs</depend>
  <depend>teleop_bridge_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
