<?xml version="1.0"?>
<package format="3">
  <name>ur_hande_description</name>
  <version>0.1.0</version>
  <description>UR robot description wrapper that attaches a Robotiq Hand-E gripper at tool0.</description>
  <maintainer email="no-reply@example.com">Noah Li</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ur_description</exec_depend>
  <exec_depend>robotiq_hande_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
