<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>receiver</name>
  <version>0.1.0</version>
  <description>Standalone Quest UDP receiver node for teleop bridge</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>TODO</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>teleop_bridge_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
